# advertools

./: .gitignore  .readthedocs.yaml  .travis.yml  HISTORY.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  Untitled.ipynb  __init__.py  _make_cli_docs.sh  _make_cli_docs_md.sh  broken_links_crawl.jl  categorical_distribution.py  classes.py  codecov.yml  kw_combinations.py  kw_match_types.py  objects.py  permute.py  pyproject.toml  requirements.txt  requirements_dev.txt  separate_rows.py  setup.cfg  setup.py  tox.ini  utm_builder.py
.github/workflows/: ci.yml  codeql.yml
advertools/: __init__.py  _cli_rev_dns_lookup.py  _regex_helpers.py  _yt_helpers.py  ad_create.py  ad_from_string.py  categorical_distribution.py  cli.py  crawlytics.py  emoji.py  emoji_df.parquet  emoji_dict.py  expand.py  extract.py  header_spider.py  image_spider.py  knowledge_graph.py  kw_generate.py  logs.py  num_format.py  partition.py  regex.py  reverse_dns_lookup.py  robotstxt.py  scratch.ipynb  screenshot_spider.py  seo_analyze.py  serp.py  serp_claude.py  sitemaps.py  spider.py  stopwords.py  twitter.py  url_builders.py  urlytics.py  utm_builder.py  word_frequency.py  word_tokenize.py  youtube.py  yt_helpers.py
advertools/cli/: cli.py
advertools/cli_docs/: cli.py
advertools/code_recipes/: example_crawl_1.jl  screenshot_strategies.py  spider_strategies.py
advertools/tests/: Untitled.ipynb  test_ad_create.py  test_cases.py  test_kw_generate.py
docs/: Makefile  ads.rst  advertools.ad_from_string.rst  advertools.cli.rst  advertools.cli_docs.cli.rst  advertools.cli_docs.rst  advertools.code_recipes.cli.rst  advertools.code_recipes.rst  advertools.code_recipes.screenshot_strategies.rst  advertools.crawl_strategies.rst  advertools.crawlytics.rst  advertools.emoji.rst  advertools.extract.rst  advertools.header_spider.rst  advertools.image_spider.rst  advertools.knowledge_graph.rst  advertools.partition.rst  advertools.robotstxt.rst  advertools.rst  advertools.screenshot_spider.rst  advertools.serp.rst  advertools.serp_claude.rst  advertools.sitemaps.rst  advertools.spider.rst  advertools.stopwords.rst  advertools.survey.rst  advertools.twitter.rst  advertools.urlytics.rst  advertools.word_frequency.rst  advertools.word_tokenize.rst  conf.py  include_changelog.rst  index.rst  kw_test.rst  make.bat  modules.rst  user_reference.rst  word_freq.rst
docs/sitemap_testing/: sitemap_index.xml
tests/: .coverage  conftest.py  sitemap-index.xml  sitemap.xml  test_ad_create.py  test_ad_from_string.py  test_crawl.py  test_crawl_or_not.py  test_crawlytics.py  test_emoji.py  test_extract.py  test_header_spider.py  test_kw_generate.py  test_logs.py  test_partition.py  test_reverse_dns_lookup.py  test_robotstxt.py  test_screenshot_spider.py  test_serp.py  test_serp_claude.py  test_sitemaps.py  test_spider.py  test_test.py  test_twitter.py  test_url_builders.py  test_urlytics.py  test_word_frequency.py  test_word_tokenize.py  test_youtube.py
tests/htmlcov/: _Users_Elias_Desktop_advertools_advertools___init___py.html  index.html  status.json  test_cases_py.html  (+7 more)
(+172 files in other folders)
