[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "advertools"
author = "Elias Dabbas"
author-email = "eliasdabbas@gmail.com"
home-page = "https://github.com/eliasdabbas/advertools"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "pandas>=1.1.0",
    "pyasn1>=0.4",
    "scrapy>=2.5.0",
    "twython>=3.8.0",
    "pyarrow>=5.0.0",
    "requests>=2.25.0",
]
description-file = 'README.rst'
keywords = "marketing advertising adwords bingads search-engine-marketing online-marketing digital-marketing digital-advertising keywords"
